--- a/src/app/common-ui/profile-card/profile-card.component.html
+++ b/src/app/common-ui/profile-card/profile-card.component.html
@@ -1,27 +1,25 @@
+@if (profile) {
+
 <div class="profile-card">
   <div class="avatar-name">
     <img
-      src="assets/images/img.png"
-      alt="avatar"
+      [src]="profile.avatarUrl | imgUrl"
+      [alt]="profile.lastName"
       class="profile-card__avatar"
     />
     <div class="profile-card__name">
-      <strong class="h6">Райан Гослинг</strong>
-      <span class="subtitle">ryan.gosling</span>
+      <strong class="h6">{{ profile.firstName }} {{ profile.lastName }}</strong>
+      <span class="subtitle">{{ profile.username }}</span>
     </div>
   </div>
-  <div class="profile-card__description">
-    Список навыков, который мы обсудили выше, — основа резюме,
-    но не единственная его часть. Также можно рассказать о себе в классическом
-    смысле — этот раздел можно добавить в сопроводительное письмо.
-  </div>
+  <div class="profile-card__description">{{ profile.description }}</div>
   <div class="profile-card__tags">
-    <div class="skill-tag">Angular</div>
-    <div class="skill-tag">HTML</div>
-    <div class="skill-tag">CSS</div>
-    <div class="skill-tag">REST</div>
+    @for (tag of profile.stack; track tag) {
+    <div class="skill-tag">{{ tag }}</div>
+    }
   </div>
   <div class="profile-card__action-btns">
     <button class="btn">Подписаться</button>
   </div>
 </div>
+}
