--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,14 @@
   --primary-color: #ae7aff;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: "JetBrains Mono", sans-serif;
   background: var(--dark-color);
@@ -13,14 +21,14 @@ body {
 }
 
 .skill-tag {
-  padding: 4px 8px;
+  padding: 0 8px;
   border-radius: 4px;
   border: 1px solid var(--light-color);
   display: inline;
   font-size: 12px;
   line-height: 24px;
   font-weight: 700;
-  margin-right: 4px;
+  height: 24px;
 }
 
 .btn {
