--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
 @import "fonts";
+@import "margins";
 
 :root {
   --dark-color: #000000;
   --light-color: #ffffff;
   --primary-color: #ae7aff;
+  --gray-color: #5f6460;
 }
 
 *,
@@ -18,6 +20,7 @@ body {
   font-family: "JetBrains Mono", sans-serif;
   background: var(--dark-color);
   color: var(--light-color);
+  background-image: url("/assets/images/bg.png");
 }
 
 .skill-tag {
@@ -32,6 +35,7 @@ body {
 }
 
 .btn {
+  width: 100%;
   border: none;
   background: var(--primary-color);
   color: var(--dark-color);
@@ -39,6 +43,29 @@ body {
   font-weight: 700;
   font-size: 14px;
   line-height: 24px;
+  cursor: pointer;
+  border: 1px solid var(--dark-color);
+  border-radius: 4px;
+}
+
+.btn-shadow {
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    right: -4px;
+    background: var(--gray-color);
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+}
+
+.h1 {
+  font-size: 48px;
+  line-height: 56px;
+  font-weight: 800;
 }
 
 .h6 {
@@ -51,4 +78,25 @@ body {
   font-size: 14px;
   line-height: 20px;
   font-weight: 400;
+}
+
+.tt-control-label {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 16px;
+  display: block;
+}
+
+.tt-input {
+  margin-top: 8px;
+  display: block;
+  border: 1px solid var(--light-color);
+  border-radius: 4px;
+  padding: 12px 20px;
+  background: var(--dark-color);
+  color: var(--light-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  font-family: "JetBrains Mono", sans-serif;
 }
