--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -45,4 +45,4 @@
   <button class="btn btn-shadow" type="submit">Войти</button>
 </form>
 
-<img class="big-logo" src="/assets/images/logo-big.svg" alt="logo" />
+<img class="big-logo" src="/assets/svg/logo-big.svg" alt="logo" />
