feat: sidebar layout

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,6 +81,20 @@ body {
   font-weight: 400;
 }
 
+.medium-text {
+  font-family: "JetBrains Mono", sans-serif;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+}
+
+.regular {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+}
+
 .tt-control-label {
   font-weight: 700;
   font-size: 12px;
