--- a/src/app/common-ui/sidebar/sidebar.component.html
+++ b/src/app/common-ui/sidebar/sidebar.component.html
@@ -10,3 +10,14 @@
     </li>
   </ul>
 </nav>
+
+<p class="medium-text mb20">Подписчики</p>
+
+<!-- <app-subscriber-card></app-subscriber-card> -->
+
+<div class="mt20 to-subscribers">
+  <a [routerLink]="['/subscribers']" class="to-subscribers-link medium-text">
+    Все подписчики
+  </a>
+  <svg icon="arrow" class="to-subscribers-icon"></svg>
+</div>
