--- a/src/app/common-ui/sidebar/sidebar.component.scss
+++ b/src/app/common-ui/sidebar/sidebar.component.scss
@@ -37,3 +37,20 @@
   width: 16px;
   height: 16px;
 }
+
+.to-subscribers {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.to-subscribers-link {
+  color: var(--primary-color);
+  text-decoration: none;
+}
+
+.to-subscribers-icon {
+  color: var(--primary-color);
+  width: 18px;
+  height: 18px;
+}
