--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,7 @@
 }
 
 body {
+  height: 100dvh;
   font-family: "JetBrains Mono", sans-serif;
   background: var(--dark-color);
   color: var(--light-color);
