--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,6 +70,13 @@ body {
   font-weight: 800;
 }
 
+.h4 {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 32px;
+}
+
 .h6 {
   font-size: 18px;
   line-height: 24px;
