feat: profile header

--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,3 +1,9 @@
 @if (profile$ | async; as profile) {
-<app-profile-header [profile]="profile"></app-profile-header>
+<header class="profile-page__header">
+  <app-profile-header [profile]="profile"></app-profile-header>
+  <a [routerLink]="['/settings']" class="btn to-settings-button">
+    Редактировать
+    <svg icon="settings" class="to-settings-icon"></svg>
+  </a>
+</header>
 }
