--- a/src/app/common-ui/sidebar/sidebar.component.html
+++ b/src/app/common-ui/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <img src="assets/svg/logo-small.svg" alt="" class="ml16 mb20" />
 
-<nav>
+<nav class="mb20">
   <ul class="main-menu-list">
     <li *ngFor="let item of menuItems">
       <button class="menu-item">
