feat: settings page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 :root {
   --dark-color: #000000;
   --light-color: #ffffff;
+  --light-transparent-color: rgba(255, 255, 255, 0.75);
   --primary-color: #ae7aff;
   --gray-color: #5f6460;
   --dark-hover-color: #161616;
@@ -123,6 +124,41 @@ body {
   font-size: 14px;
   line-height: 21px;
   font-family: "JetBrains Mono", sans-serif;
+}
+
+.tt-form-label {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.tt-form-input {
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  border: none;
+  border-bottom: 1px solid var(--light-color);
+  height: 33px;
+  background: none;
+  color: var(--light-color);
+
+  &:focus-visible {
+    outline: 1px solid var(--primary-color);
+  }
+}
+
+.tt-form-label__text {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+  color: var(--light-transparent-color);
+}
+
+.tt-text-area {
+  height: 84px;
+  resize: none;
 }
 
 input:-webkit-autofill,
