--- a/src/app/common-ui/sidebar/sidebar.component.html
+++ b/src/app/common-ui/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
 <nav class="mb20">
   <ul class="main-menu-list">
     <li *ngFor="let item of menuItems">
-      <a class="menu-item" [routerLink]="[item.link]">
+      <a class="menu-item" [routerLink]="[item.link]" routerLinkActive="active">
         <svg [icon]="item.icon"></svg>
         <span> {{ item.label }}</span>
       </a>
