--- a/src/app/common-ui/sidebar/sidebar.component.scss
+++ b/src/app/common-ui/sidebar/sidebar.component.scss
@@ -34,6 +34,11 @@
     background: var(--dark-hover-color);
     color: var(--primary-color);
   }
+
+  &.active {
+    background: var(--dark-hover-color);
+    color: var(--primary-color);
+  }
 }
 
 .menu-item svg {
