--- a/src/app/common-ui/profile-header/profile-header.component.html
+++ b/src/app/common-ui/profile-header/profile-header.component.html
@@ -1,8 +1,5 @@
-@if (profile(); as profile) { @if (profile.avatarUrl) {
-<img [src]="profile.avatarUrl | imgUrl" [alt]="profile.lastName" />
-} @else {
-<img src="assets/svg/avatar-placeholder.svg" [alt]="profile.lastName" />
-}
+@if (profile(); as profile) {
+<app-avatar-circle [avatarUrl]="profile.avatarUrl"></app-avatar-circle>
 <div class="username-and-name">
   <h1 class="h4 mb4">{{ profile.firstName }} {{ profile.lastName }}</h1>
   <span class="regular">{{ profile.username }}</span>
