--- a/src/app/pages/profile-page/post-input/post-input.component.html
+++ b/src/app/pages/profile-page/post-input/post-input.component.html
@@ -1,1 +1,17 @@
-<p>post-input works!</p>
+<app-avatar-circle
+  *ngIf="profile() as profile"
+  class="size32"
+  [avatarUrl]="profile.avatarUrl"
+  (input)="onTextAreaInput($event)"
+>
+</app-avatar-circle>
+
+<textarea
+  [(ngModel)]="postText"
+  (input)="onTextAreaInput($event)"
+  class="hidden-textarea"
+></textarea>
+
+<button class="btn-icon" (click)="onCreatePost()">
+  <svg icon="send-message" class="svg16"></svg>
+</button>
