--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,21 @@ body {
   border-radius: 4px;
 }
 
+.btn-icon {
+  width: 44px;
+  height: 44px;
+  cursor: pointer;
+  color: var(--dark-color);
+  border: 1px solid var(--dark-color);
+  border-radius: 4px;
+  background: var(--primary-color);
+}
+
+.svg16 {
+  width: 16px;
+  height: 16px;
+}
+
 .btn-shadow {
   position: relative;
   &:before {
