--- a/src/app/pages/profile-page/post-input/post-input.component.scss
+++ b/src/app/pages/profile-page/post-input/post-input.component.scss
@@ -8,6 +8,11 @@
   align-items: center;
 }
 
+:host.comment {
+  border: 1px dashed var(--light-color);
+  border-radius: 4px;
+}
+
 .hidden-textarea {
   resize: none;
   background: var(--dark-color);
